# visual-novel-web-maker

./: .gitignore  CMakeLists.txt  README.md  build_simple.sh  wsjcpp.yml
game-template/: game.json  index.css  index.html  index.js
game-template/scenes/: _start.json  show_0.json  start_1.json  steam_0.json
html/: data_pl_sample.js  index.css
src/: main.cpp  visual_novel_web_maker_http_server.cpp  visual_novel_web_maker_http_server.h
src.wsjcpp/: CMakeLists.txt
template/: game.json  index.css  index.html  index.js
web/: index.html  index.js  visual-novel-editor.js
